--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "3.6"
 install:
-  - pip install -r requirements.txt
+  - pip install nose codecov
 script:
-  - nosetests
+  - nosetests --with-coverage --cover-package=csv2md
+after_success:
+  - codecov
